dev/sass/base-element-styles/modules/objects/_header.scss
header.ug.global{
  display: flex;
  justify-content: space-between;
  box-shadow: 1px 0px 5px 1px rgba(0,0,0,0.25);
  position: relative;
  z-index: 10;
  .logo{
    margin: 1rem;
    display: inline-block;
    height: 60px;
    width: 60px;
    svg{
      max-width: 100%;
      max-height: 100%;
    }
  }
  & > nav.global{
    display: flex;
    justify-content: space-between;
    align-items: center;
    @include breakpoint(1024px) {
      display: none;
    }
    > *{
      margin: 0 1rem;
      height: 80px;
      display: inline-flex;
      align-items: center;
      padding: 0 1rem;
      transition: $transition;
      &:hover, &.active{
        background-color: $highlight-l;
        color: $white;
        a{
          color: $white;
        }
      }
      &.dropdown{
        padding: 0;
        a{
          padding: 1rem;
          &:hover{
            text-decoration: underline;
          }
          &.active{
            font-weight: 900;
            text-decoration: underline;
          }
        }
      }
    }
    > a{
      padding: 1rem;
    }
    a{
      text-decoration: none;
    }
    .dropdown{
      &:hover{
        .dropdown-content{
          max-height: 100vh;
          padding: 2rem;
        }
      }
      &.mini{
        position: relative;
        .dropdown-content{
          margin: 0 -2rem;
          width: calc(100% + 4rem);
        }
      }
      .dropdown-content{
        position: absolute;
        display: flex;
        justify-content: space-between;
        top: 80px;
        left: 0;
        width: 100%;
        z-index: 2;
        padding: 0 2rem;
        background-color: $highlight-l;
        max-height: 0px;
        overflow: hidden;
        transition: $transition;
        nav{
          display: flex;
          flex-direction: column;
          a{
            color: $white;
            &:first-of-type{
              font-weight: 900;
            }
          }
        }
      }
    }
    .search{
      margin: 0 0 0 2rem;
      padding: 2rem;
      border-left: 1px solid $highlight;
      display: inline-flex;
      justify-content: center;
      align-items: center;
      position: relative;

      form{
        display: inline-flex;
        justify-content: center;
        align-items: center;
        margin: 0;
        pointer-events: none;
      }

      input{
        margin: 0;
        &[type='button']{
          width: 4rem;
          height: 4rem;
          border: none;
          border-radius: 0px;
          padding: 0;
          background-color: transparent;
          background-image: url("../img/sprite.stack.svg#search");
          pointer-events: none;
        }
        &[type='text']{
          border-color: $white;
          background-color: transparent;
          color: $white;
        }

      }

      span{
        position: absolute;
        width: 2rem;
        height: 2rem;
        top: 50%;
        right: 3rem;
        margin-top: -1rem;
        pointer-events: none;
        path{
          fill: $highlight;
        }
      }

      .search-wrapper{
        max-width: 0;
        overflow: hidden;
        margin: 0;
        transition: $transition;
      }

      &:hover{
        cursor: pointer;
        span{
          path{
            fill: $white;
          }
        }
      }

      &.open{
        width: auto;
        background-color: $highlight;
        span{
          path{
            fill: $white;
          }
        }
        .search-wrapper{
          max-width: 250px;
        }
        form, input{
          pointer-events: all;
        }
      }

    }

  }
  .menu{
    height: 80px;
    width: 80px;
    border-right: 1px solid $offwhite;
    cursor: pointer;
    transition: $transition;
    & > a{
      display: inline-block;
      pointer-events: all;
      height: 80px;
      padding: 2rem;
    }
    svg{
      fill:$highlight;
      pointer-events: none;
      rect{
        transform-origin: center;
          transition: .25s transform ease;
      }
      #top{
        transform: translateX(0) translateY(0) rotate(0);
      }
      #mid{
        transform: translateX(0) translateY(0) rotate(0);
        transform-origin: center;
      }
      #bot{
        transform: translateY(0);
      }
    }
    nav.global{
      border-top: 1px solid $offwhite;
      position: absolute;
      top: 80px;
      left: 0;
      width: 100%;
      height: auto;
      display: flex;
      flex-direction: column;
      z-index: 3;
      background-color: $highlight;
      max-height: 0px;
      overflow: hidden;
      transition: $transition;
      & > * {
        text-align: center;
        padding: 2rem;
        border-bottom: 1px solid $offwhite;
        color: $white;
        text-decoration: none;
        &.active{
          background-color: $highlight-l;
        }
        &.dropdown {
          padding: 0;
          display: inline-flex;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          & > a{
            padding: 2rem;
            color: $white;
            text-decoration: none;

          }
        }
      }
      .search{
        form{
          margin: 0;
          display: flex;
          justify-content: center;
          input{
            margin: 0;
            &[type="button"]{
              margin-right: -4rem;
              width:4rem;
              padding: 0;
            }
            &[type="text"]{
              background-color: transparent;
              color: $white;
              height: 4rem;
              width: 200px;
            }

          }
          span{
            width: 4rem;
            height: 4rem;
            display: inline-flex;
            align-items: center;
            justify-content: center;

          }
        }
      }
    }
    &.open{
      background-color: $highlight;
      svg{
        fill: $white;
        #top{
          transform: translateX(-5px) translateY(56px) rotate(45deg);
        }
        #mid{
          transform: translateX(-3px) translateY(-15px) rotate(-45deg);
          transform-origin: center;
        }
        #bot{
          transform: translateY(150%);
        }
      }

      nav.global{
        max-height: 3000px;
      }

    }
    .dropdown{
      a{
        pointer-events: none;
      }
      .dropdown-content{
        max-height: 0px;
        overflow: hidden;
        transition: $transition;
        background-color: $highlight-d;
        width: 100%;
        nav{
          display: flex;
          flex-direction: column;
          flex-wrap: wrap;
          padding: 2rem 1.5rem;
          width: 100%;
        }
        a{
          color: $white;
          text-decoration: none;
          width: 100%;
          border-bottom: 1px solid $offwhite;
          padding: 2rem;
          display: block;
          &.active{
            background-color: $highlight-l;
          }
          &:last-of-type{
            border:none;
          }
        }
      }
      &.open {
        & > a{
          pointer-events: all;
          display: block;
          position: relative;
          z-index: 4;
        }
        .dropdown-content{
          max-height: 3000px;
        }
      }
    }
    @include breakpoint(1024px, min-width) {
      display: none;
    }
  }
}

